[package]
name = "committer"
version = "0.1.0"
edition = "2021"
description = "Fast AI-powered git commit message generator"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
dirs = "5"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
